--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,9 +9,12 @@
         android:id="@+id/login_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         >
     </android.support.v4.view.ViewPager>
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 
 </RelativeLayout>
