--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,9 +4,29 @@
     android:layout_height="match_parent"
     tools:context="com.text.ysq.lanrenzhoumo.Fragment.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <ListView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/home_list_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="懒人周末"
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
+        android:padding="10dp"/>
+        <TextView
+            android:id="@+id/home_list_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#F1EFEC"
+            android:layout_below="@id/home_list_title"/>
+    <ListView
+        android:id="@+id/home_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/home_list_line"/>
+    </RelativeLayout>
 
 </FrameLayout>
