--- a/app/src/main/res/layout/activity_self_data_activity_two.xml
+++ b/app/src/main/res/layout/activity_self_data_activity_two.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="#FEFEFE">
         <ImageButton
-            android:id="@+id/self_two_btn_one"
+            android:id="@+id/self_two_btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
@@ -26,7 +26,7 @@
             android:layout_gravity="center_vertical"
             android:textSize="18sp"/>
         <ImageButton
-            android:id="@+id/self_two_btn_two"
+            android:id="@+id/self_two_btn_go"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
@@ -46,8 +46,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/self_two_line_one"
         android:layout_marginTop="30dp"
+
         >
         <CheckBox
+        android:id="@+id/self_two_btn_zhoubianyou"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -61,6 +63,7 @@
         android:layout_marginLeft="20dp"
         />
         <CheckBox
+            android:id="@+id/self_two_btn_jiuba"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -74,6 +77,7 @@
             android:layout_marginLeft="20dp"
             />
         <CheckBox
+            android:id="@+id/self_two_btn_yinyue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -95,6 +99,7 @@
         android:layout_marginTop="30dp"
         >
         <CheckBox
+            android:id="@+id/self_two_btn_xiju"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -108,6 +113,7 @@
             android:layout_marginLeft="20dp"
             />
         <CheckBox
+            android:id="@+id/self_two_btn_zhanlan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -121,6 +127,7 @@
             android:layout_marginLeft="20dp"
             />
         <CheckBox
+            android:id="@+id/self_two_btn_meishi"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -142,6 +149,7 @@
         android:layout_marginTop="30dp"
         >
         <CheckBox
+            android:id="@+id/self_two_btn_gouwu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -155,6 +163,7 @@
             android:layout_marginLeft="20dp"
             />
         <CheckBox
+            android:id="@+id/self_two_btn_dianying"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -168,6 +177,7 @@
             android:layout_marginLeft="20dp"
             />
         <CheckBox
+            android:id="@+id/self_two_btn_juhui"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -189,6 +199,7 @@
         android:layout_marginTop="30dp"
         >
         <CheckBox
+            android:id="@+id/self_two_btn_yundong"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -202,6 +213,7 @@
             android:layout_marginLeft="20dp"
             />
         <CheckBox
+            android:id="@+id/self_two_btn_gongyi"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -215,6 +227,7 @@
             android:layout_marginLeft="20dp"
             />
         <CheckBox
+            android:id="@+id/self_two_btn_shangye"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
