--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,9 +4,19 @@
     android:layout_height="match_parent"
     tools:context="com.text.ysq.lanrenzhoumo.Fragment.SearchFragment">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="SearchFragment" />
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/search_choose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/search_choose"/>
+
+
+    </RelativeLayout>
 
 </FrameLayout>
