--- a/app/src/main/res/layout/fragment_assistant.xml
+++ b/app/src/main/res/layout/fragment_assistant.xml
@@ -4,10 +4,78 @@
     android:layout_height="match_parent"
     tools:context="com.text.ysq.lanrenzhoumo.Fragment.AssistantFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="AssistantFragment" />
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/home_list_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="懒喵助理"
+            android:textSize="20sp"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"/>
+        <TextView
+            android:id="@+id/assistant_list_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#F1EFEC"
+            android:layout_below="@id/home_list_title"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/assistant_list_line"
+            android:background="#FFFCF9">
+            <ImageView
+                android:id="@+id/assistant_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/big_black_cat"
+                android:layout_marginTop="20dp"
+                />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/assistant_img"
+                android:layout_alignTop="@id/assistant_img"
+                android:background="@drawable/rc_left_chat_wind"
+                android:padding="10dp"
+                android:layout_marginRight="50dp">
+            <TextView
+                android:id="@+id/assistant_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="是不是很难找到适合自己或团队的活动呢?在下方发布一条你想要的周末需求，懒喵助理为您定制只属于你或团队的美好周末！"
+                />
+            <TextView
+                android:id="@+id/assistant_txt2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/assistant_txt"
+                android:text="遇到问题？"
+                android:textSize="10sp"
+                android:textColor="#7A8089"/>
+                <TextView
+                    android:id="@+id/assistant_txt3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/assistant_txt2"
+                    android:layout_alignTop="@id/assistant_txt2"
+                    android:textSize="10sp"
+                    android:text="懒喵助手"
+                    android:textColor="#FF771D"
+                    android:onClick="click"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/assistant_txt3"
+                    android:layout_alignTop="@id/assistant_txt2"
+                    android:textSize="10sp"
+                    android:text="为你服务~"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+    </RelativeLayout>
 
 </FrameLayout>
