--- a/app/src/main/res/layout/fragment_home_item.xml
+++ b/app/src/main/res/layout/fragment_home_item.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:id="@+id/home_item_imageview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:src="@drawable/person_bg_unlogin"
         android:scaleType="fitXY"
         />
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="成人钢琴【18课时】深度体验，御剑最美好的自己【188元抢购】！"
-        android:textSize="18sp"/>
+        android:textSize="16sp"/>
         <LinearLayout
             android:id="@+id/home_item_linearlayout_one"
             android:layout_width="match_parent"
@@ -33,7 +33,8 @@
                 android:id="@+id/home_item_txt_huodong"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="活动"/>
+                android:text="活动"
+                android:textSize="14sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -44,7 +45,8 @@
                 android:id="@+id/home_item_txt_juli"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="距离"/>
+                android:text="距离"
+                android:textSize="14sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -55,7 +57,8 @@
                 android:id="@+id/home_item_txt_fenlei"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="分类"/>
+                android:text="分类"
+                android:textSize="14sp"/>
         </LinearLayout>
         <RelativeLayout
             android:id="@+id/home_item_linearlayout_two"
@@ -68,6 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="时间"
+                android:textSize="14sp"
                 android:background="@drawable/textbiankuang"
                 />
             <TextView
@@ -76,6 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/home_item_txt_time"
                 android:text="收藏数"
+                android:textSize="14sp"
                 android:drawableLeft="@drawable/ic_nav_black_heart_off_small"
                 android:background="@drawable/textbiankuang"
                 android:layout_marginLeft="10dp"/>
@@ -84,6 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="价格"
+                android:textSize="14sp"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/textbiankuang"/>
         </RelativeLayout>
