--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,7 +10,8 @@
         <Button
             android:id="@+id/search_choose"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
